# SiTech-INDI

./: .gitignore  99-sitech.rules  CMakeLists.txt  INSTALL_GUIDE.md  LINUX_SITECHEXE.md  PACKAGE_SUMMARY.md  PROTOCOL_FIX_SUMMARY.md  PROTOCOL_IMPLEMENTATION.md  PROTOCOL_NOTES.md  README.md  RPI_GUIDE.md  SiTechSerialProtocol.txt  SiTechTCPProtocol.txt  TESTING_GUIDE.md  build.sh  indi_sitech.xml  install.sh  sitech_mount.cpp  sitech_mount.h
